Add general header

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "hex_dump_tools.h": "c"
+        "hex_dump_tools.h": "c",
+        "general.h": "c"
     }
 }
