--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "hex_dump_tools.h": "c",
-        "general.h": "c"
+        "general.h": "c",
+        "error_msg.h": "c"
     }
 }
